--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "frontend",
+  "name": "todo",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -15,9 +15,9 @@
   },
   "devDependencies": {
     "@types/node": "17.0.23",
-    "@types/react": "18.0.1",
+    "@types/react": "18.0.0",
     "@types/react-dom": "18.0.0",
-    "eslint": "8.13.0",
+    "eslint": "8.12.0",
     "eslint-config-next": "12.1.4",
     "typescript": "4.6.3"
   }
