--- a/frontend/package.json
+++ b/frontend/package.json
@@ -5,15 +5,19 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
+    "test": "cypress run",
+    "test:watch": "cypress open",
     "start": "next start",
     "lint": "next lint"
   },
   "dependencies": {
+    "cypress": "^9.5.3",
     "next": "12.1.4",
     "react": "18.0.0",
     "react-dom": "18.0.0"
   },
   "devDependencies": {
+    "@types/jest": "^27.4.1",
     "@types/node": "17.0.23",
     "@types/react": "18.0.0",
     "@types/react-dom": "18.0.0",
